data/EvoSuiteBenchmark/original/13_jdbacl/src/main/java/org/databene/jdbacl/sql/parser/SQLParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 /Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g 2011-06-08 18:35:16

	package org.databene.jdbacl.sql.parser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

@SuppressWarnings("unused")
public class SQLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "INT", "NOT", "IDENTIFIER", "STRING", "QUOTED_NAME", "PRIMARY", "DEFAULT", "COMMENT", "CREATE_TABLE", "DROP_TABLE", "ALTER_TABLE", "TABLE_NAME", "COLUMN_NAME", "SIZE", "CREATE_SEQUENCE", "DROP_SEQUENCE", "NAME_LIST", "CREATE_INDEX", "INDEX_NAME", "TABLE_DETAILS", "COLUMN_SPEC", "ORA_CONFIGS", "COMMENT_TABLE", "COMMENT_COLUMN", "INVOCATION", "ARGUMENTS", "VALUE_LIST", "OR", "AND", "XOR", "EQ", "BANGEQ", "LTGT", "GT", "GE", "LT", "LE", "IS", "NULL", "IN", "BETWEEN", "PLUS", "SUB", "STAR", "SLASH", "PERCENT", "BARBAR", "ROWID", "NUMBER", "VARCHAR2", "NVARCHAR2", "BYTE", "CHAR", "DATE", "TIMESTAMP", "BEFORE", "WS", "';'", "'CREATE'", "'GLOBAL'", "'TEMPORARY'", "'TABLE'", "'('", "')'", "','", "'NCHAR2'", "'BLOB'", "'CLOB'", "'NCLOB'", "'CONSTRAINT'", "'KEY'", "'ORGANIZATION'", "'TABLESPACE'", "'PCTUSED'", "'PCTFREE'", "'INITRANS'", "'MAXTRANS'", "'COMPRESS'", "'ENABLE'", "'ROW'", "'MOVEMENT'", "'DISABLE'", "'ON'", "'COMMIT'", "'DELETE'", "'ROWS'", "'STORAGE'", "'INITIAL'", "'NEXT'", "'MINEXTENTS'", "'MAXEXTENTS'", "'PCTINCREASE'", "'BUFFER_POOL'", "'PARTITION'", "'BY'", "'RANGE'", "'HASH'", "'LIST'", "'SUBPARTITION'", "'PARTITIONS'", "'STORE'", "'VALUES'", "'LESS'", "'THAN'", "'SUBPARTITIONS'", "'LOGGING'", "'NOLOGGING'", "'NOCOMPRESS'", "'CACHE'", "'NOCACHE'", "'NOPARALLEL'", "'MONITORING'", "'RETENTION'", "'LOB'", "'AS'", "'CHUNK'", "'PCTVERSION'", "'INDEX'", "'ALTER'", "'DROP'", "'CASCADE'", "'ADD'", "'USING'", "'FOREIGN'", "'REFERENCES'", "'UNIQUE'", "'CHECK'", "'CONSTRAINTS'", "'INDEXTYPE'", "'SEQUENCE'", "'COMMENT'", "'COLUMN'", "'.'", "'TRIGGER'"
    };
    public static final int EOF=-1;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__70=70;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__73=73;
    public static final int T__74=74;
    public static final int T__75=75;
    public static final int T__76=76;
    public static final int T__77=77;
    public static final int T__78=78;
    public static final int T__79=79;
    public static final int T__80=80;
    public static final int T__81=81;
    public static final int T__82=82;
    public static final int T__83=83;
    public static final int T__84=84;
    public static final int T__85=85;
    public static final int T__86=86;
    public static final int T__87=87;
    public static final int T__88=88;
    public static final int T__89=89;
    public static final int T__90=90;
    public static final int T__91=91;
    public static final int T__92=92;
    public static final int T__93=93;
    public static final int T__94=94;
    public static final int T__95=95;
    public static final int T__96=96;
    public static final int T__97=97;
    public static final int T__98=98;
    public static final int T__99=99;
    public static final int T__100=100;
    public static final int T__101=101;
    public static final int T__102=102;
    public static final int T__103=103;
    public static final int T__104=104;
    public static final int T__105=105;
    public static final int T__106=106;
    public static final int T__107=107;
    public static final int T__108=108;
    public static final int T__109=109;
    public static final int T__110=110;
    public static final int T__111=111;
    public static final int T__112=112;
    public static final int T__113=113;
    public static final int T__114=114;
    public static final int T__115=115;
    public static final int T__116=116;
    public static final int T__117=117;
    public static final int T__118=118;
    public static final int T__119=119;
    public static final int T__120=120;
    public static final int T__121=121;
    public static final int T__122=122;
    public static final int T__123=123;
    public static final int T__124=124;
    public static final int T__125=125;
    public static final int T__126=126;
    public static final int T__127=127;
    public static final int T__128=128;
    public static final int T__129=129;
    public static final int T__130=130;
    public static final int T__131=131;
    public static final int T__132=132;
    public static final int T__133=133;
    public static final int T__134=134;
    public static final int T__135=135;
    public static final int T__136=136;
    public static final int T__137=137;
    public static final int INT=4;
    public static final int NOT=5;
    public static final int IDENTIFIER=6;
    public static final int STRING=7;
    public static final int QUOTED_NAME=8;
    public static final int PRIMARY=9;
    public static final int DEFAULT=10;
    public static final int COMMENT=11;
    public static final int CREATE_TABLE=12;
    public static final int DROP_TABLE=13;
    public static final int ALTER_TABLE=14;
    public static final int TABLE_NAME=15;
    public static final int COLUMN_NAME=16;
    public static final int SIZE=17;
    public static final int CREATE_SEQUENCE=18;
    public static final int DROP_SEQUENCE=19;
    public static final int NAME_LIST=20;
    public static final int CREATE_INDEX=21;
    public static final int INDEX_NAME=22;
    public static final int TABLE_DETAILS=23;
    public static final int COLUMN_SPEC=24;
    public static final int ORA_CONFIGS=25;
    public static final int COMMENT_TABLE=26;
    public static final int COMMENT_COLUMN=27;
    public static final int INVOCATION=28;
    public static final int ARGUMENTS=29;
    public static final int VALUE_LIST=30;
    public static final int OR=31;
    public static final int AND=32;
    public static final int XOR=33;
    public static final int EQ=34;
    public static final int BANGEQ=35;
    public static final int LTGT=36;
    public static final int GT=37;
    public static final int GE=38;
    public static final int LT=39;
    public static final int LE=40;
    public static final int IS=41;
    public static final int NULL=42;
    public static final int IN=43;
    public static final int BETWEEN=44;
    public static final int PLUS=45;
    public static final int SUB=46;
    public static final int STAR=47;
    public static final int SLASH=48;
    public static final int PERCENT=49;
    public static final int BARBAR=50;
    public static final int ROWID=51;
    public static final int NUMBER=52;
    public static final int VARCHAR2=53;
    public static final int NVARCHAR2=54;
    public static final int BYTE=55;
    public static final int CHAR=56;
    public static final int DATE=57;
    public static final int TIMESTAMP=58;
    public static final int BEFORE=59;
    public static final int WS=60;

    // delegates
    // delegators


        public SQLParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public SQLParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return SQLParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g"; }


    	protected void mismatch(IntStream input, int ttype, BitSet follow)
    	  throws RecognitionException
    	{
    	  throw new MismatchedTokenException(ttype, input);
    	}
    	
    	public Object recoverFromMismatchedSet(IntStream input, RecognitionException e, BitSet follow)
    	  throws RecognitionException
    	{
    	  throw e;
    	}


    public static class commands_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "commands"
    // /Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g:93:1: commands : ( command )* ;
    public final SQLParser.commands_return commands() throws RecognitionException {
        SQLParser.commands_return retval = new SQLParser.commands_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        SQLParser.command_return command1 = null;



        try {
            // /Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g:93:9: ( ( command )* )
            // /Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g:93:11: ( command )*
            {
            root_0 = (Object)adaptor.nil();

            // /Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g:93:11: ( command )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==62||(LA1_0>=122 && LA1_0<=123)||LA1_0==134) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g:93:11: command
            	    {
            	    pushFollow(FOLLOW_command_in_commands58);
            	    command1=command();

            	    state._fsp--;

            	    adaptor.addChild(root_0, command1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        	catch (RecognitionException e) {
        	  throw e;
        	}
        finally {
        }
        return retval;
    }
    // $ANTLR end "commands"

    public static class command_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "command"
    // /Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g:95:1: command : ( ( create_table ';' ) | ( comment ';' ) | ( drop_table ';' ) | ( alter_table ';' ) | ( create_index ';' ) | ( drop_index ';' ) | ( create_sequence ';' ) | ( drop_sequence ';' ) );
    public final SQLParser.command_return command() throws RecognitionException {
        SQLParser.command_return retval = new SQLParser.command_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal3=null;
        Token char_literal5=null;
        Token char_literal7=null;
        Token char_literal9=null;
        Token char_literal11=null;
        Token char_literal13=null;
        Token char_literal15=null;
        Token char_literal17=null;
        SQLParser.create_table_return create_table2 = null;

        SQLParser.comment_return comment4 = null;

        SQLParser.drop_table_return drop_table6 = null;

        SQLParser.alter_table_return alter_table8 = null;

        SQLParser.create_index_return create_index10 = null;

        SQLParser.drop_index_return drop_index12 = null;

        SQLParser.create_sequence_return create_sequence14 = null;

        SQLParser.drop_sequence_return drop_sequence16 = null;


        Object char_literal3_tree=null;
        Object char_literal5_tree=null;
        Object char_literal7_tree=null;
        Object char_literal9_tree=null;
        Object char_literal11_tree=null;
        Object char_literal13_tree=null;
        Object char_literal15_tree=null;
        Object char_literal17_tree=null;

        try {
            // /Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g:95:9: ( ( create_table ';' ) | ( comment ';' ) | ( drop_table ';' ) | ( alter_table ';' ) | ( create_index ';' ) | ( drop_index ';' ) | ( create_sequence ';' ) | ( drop_sequence ';' ) )
            int alt2=8;
            alt2 = dfa2.predict(input);
            switch (alt2) {
                case 1 :
                    // /Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g:95:11: ( create_table ';' )
                    {
                    root_0 = (Object)adaptor.nil();

                    // /Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g:95:11: ( create_table ';' )
                    // /Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g:95:12: create_table ';'
                    {
                    pushFollow(FOLLOW_create_table_in_command68);
                    create_table2=create_table();

                    state._fsp--;

                    adaptor.addChild(root_0, create_table2.getTree());
                    char_literal3=(Token)match(input,61,FOLLOW_61_in_command73); 

                    }


                    }
                    break;
                case 2 :
                    // /Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g:96:4: ( comment ';' )
                    {
                    root_0 = (Object)adaptor.nil();

                    // /Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g:96:4: ( comment ';' )
                    // /Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g:96:5: comment ';'
                    {
                    pushFollow(FOLLOW_comment_in_command81);
                    comment4=comment();

                    state._fsp--;

                    adaptor.addChild(root_0, comment4.getTree());
                    char_literal5=(Token)match(input,61,FOLLOW_61_in_command91); 

                    }


                    }
                    break;
                case 3 :
                    // /Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g:97:4: ( drop_table ';' )
                    {
                    root_0 = (Object)adaptor.nil();

                    // /Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g:97:4: ( drop_table ';' )
                    // /Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g:97:5: drop_table ';'
                    {
                    pushFollow(FOLLOW_drop_table_in_command99);
                    drop_table6=drop_table();

                    state._fsp--;

                    adaptor.addChild(root_0, drop_table6.getTree());
                    char_literal7=(Token)match(input,61,FOLLOW_61_in_command106); 

                    }


                    }
                    break;
                case 4 :
                    // /Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g:98:4: ( alter_table ';' )
                    {
                    root_0 = (Object)adaptor.nil();

                    // /Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g:98:4: ( alter_table ';' )
                    // /Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g:98:5: alter_table ';'
                    {
                    pushFollow(FOLLOW_alter_table_in_command114);
                    alter_table8=alter_table();

                    state._fsp--;

                    adaptor.addChild(root_0, alter_table8.getTree());
                    char_literal9=(Token)match(input,61,FOLLOW_61_in_command120); 

                    }


                    }
                    break;
                case 5 :
                    // /Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g:99:4: ( create_index ';' )
                    {
                    root_0 = (Object)adaptor.nil();

                    // /Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g:99:4: ( create_index ';' )
                    // /Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g:99:5: create_index ';'
                    {
                    pushFollow(FOLLOW_create_index_in_command128);
                    create_index10=create_index();

                    state._fsp--;

                    adaptor.addChild(root_0, create_index10.getTree());
                    char_literal11=(Token)match(input,61,FOLLOW_61_in_command133); 

                    }


                    }
                    break;
                case 6 :
                    // /Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g:100:4: ( drop_index ';' )
                    {
                    root_0 = (Object)adaptor.nil();

                    // /Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g:100:4: ( drop_index ';' )
                    // /Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g:100:5: drop_index ';'
                    {
                    pushFollow(FOLLOW_drop_index_in_command141);
                    drop_index12=drop_index();

                    state._fsp--;

                    adaptor.addChild(root_0, drop_index12.getTree());
                    char_literal13=(Token)match(input,61,FOLLOW_61_in_command148); 

                    }


                    }
                    break;
                case 7 :
                    // /Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g:101:4: ( create_sequence ';' )
                    {
                    root_0 = (Object)adaptor.nil();

                    // /Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g:101:4: ( create_sequence ';' )
                    // /Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g:101:5: create_sequence ';'
                    {
                    pushFollow(FOLLOW_create_sequence_in_command156);
                    create_sequence14=create_sequence();

                    state._fsp--;

                    adaptor.addChild(root_0, create_sequence14.getTree());
                    char_literal15=(Token)match(input,61,FOLLOW_61_in_command158); 

                    }


                    }
                    break;
                case 8 :
                    // /Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g:102:4: ( drop_sequence ';' )
                    {
                    root_0 = (Object)adaptor.nil();

                    // /Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g:102:4: ( drop_sequence ';' )
                    // /Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g:102:5: drop_sequence ';'
                    {
                    pushFollow(FOLLOW_drop_sequence_in_command166);
                    drop_sequence16=drop_sequence();

                    state._fsp--;

                    adaptor.addChild(root_0, drop_sequence16.getTree());
                    char_literal17=(Token)match(input,61,FOLLOW_61_in_command170); 

                    }


                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        	catch (RecognitionException e) {
        	  throw e;
        	}
        finally {
        }
        return retval;
    }
    // $ANTLR end "command"

    public static class create_table_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "create_table"
    // /Users/volker/Documents/databene/jdbacl/src/main/g/SQL.g:107:1: create_table : 'CREATE' ( 'GLOBAL' )? ( 'TEMPORARY' )? 'TABLE' table_name '(' table_details ')' ora_configs -> ^( CREATE_TABLE table_name table_details ora_configs ) ;
    public final SQLParser.create_table_return create_table() throws RecognitionException {
        SQLParser.create_table_return retval = new SQLParser.create_table_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal18=null;
        Token string_literal19=null;
        Token string_literal20=null;
        Token string_literal21=null;
        Token char_literal23=null;
        Token char_literal25=null;
        SQLParser.table_name_return table_name22 = null;

        SQLParser.table_details_return table_details24 = null;

        SQLParser.ora_configs_return ora_configs26 = null;

